[Fix] Home - products grid layout uneven height

--- a/client/src/app/home/home.component.scss
+++ b/client/src/app/home/home.component.scss
@@ -17,6 +17,7 @@
       grid-template-columns: 1fr;
       row-gap: 24px;
       .product-card {
+        height: 100%;
         max-width: 350px;
         margin: 0 auto;
         &__image {
